--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 🇨🇳 中国-157.4KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38106, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇨🇳 中国-309.4KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇨🇳 中国-1.68MB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇨🇳 中国-6.91MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-2.20MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-5.56MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-19.98MB/s(Youtube:不良林), server: jp1.jjzgy.live, port: 32333, type: trojan, password: 1c3dd378-6dc3-3a81-8461-ae927cd6fb7c, sni: jp1.jjzgy.live, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-3.84MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
-  - {name: 🇸🇬 新加坡-3.38MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
   - {name: 🇬🇧 英国-1.63MB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇺🇸 美国-3.60MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
   - {name: 🇦🇺 澳大利亚-2.11MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇨🇳 中国-157.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-309.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.91MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.56MB/s(Youtube:不良林)
-      - 🇯🇵 日本-19.98MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.84MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.38MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.11MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇨🇳 中国-157.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-309.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.91MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.56MB/s(Youtube:不良林)
-      - 🇯🇵 日本-19.98MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.84MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.38MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.11MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇨🇳 中国-157.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-309.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.91MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.56MB/s(Youtube:不良林)
-      - 🇯🇵 日本-19.98MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.84MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.38MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.11MB/s(Youtube:不良林)
@@ -66,18 +66,17 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-3.84MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇨🇳 中国-157.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-309.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.91MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.56MB/s(Youtube:不良林)
-      - 🇯🇵 日本-19.98MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.84MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.38MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.11MB/s(Youtube:不良林)
@@ -88,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇨🇳 中国-157.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-309.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.91MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.56MB/s(Youtube:不良林)
-      - 🇯🇵 日本-19.98MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.84MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.38MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.11MB/s(Youtube:不良林)
@@ -104,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇨🇳 中国-157.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-309.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.91MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.56MB/s(Youtube:不良林)
-      - 🇯🇵 日本-19.98MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.84MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.38MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.11MB/s(Youtube:不良林)
@@ -129,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇨🇳 中国-157.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-309.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.91MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.56MB/s(Youtube:不良林)
-      - 🇯🇵 日本-19.98MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.84MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.38MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.11MB/s(Youtube:不良林)
